google tag manager

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11101574477"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WHDDPLJ');</script>
+  <!-- End Google Tag Manager -->
 
-  gtag('config', 'AW-11101574477');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11101574477"></script> -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-11101574477');
+  </script>
   <meta charset="utf-8" />
   <!--Bootstrap  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,12 +34,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="keywords"
-    content="Ankara Lazer Epilasyon , Ankara Epilasyon, Ankara Bölgesel Zayıflama, Ankara Güzellik Salonu - Ankara Lavinya Golden Güzellik Merkezi olarak İlkadımda bulunan salonumuzda buz başlıklı, diode başlıklı lazer epilasyon, hydrafacial ve medikal cilt bakımı, yosun peeling, bölgesel incelme, slim zayıflama, g5 masajı, selülit sıkılaştırma ve kavitasyon işlemleri yapılmaktadır. Estetik ve güzellik anlayışının sağlıkla ön planda tutulduğu güzellik merkezimizde, koşulsuz müşteri memnuniyeti sunma amaçlı, konusunda deneyimli ve profesyonel bir ekip tarafından hizmet vermektedir."/>
+    content="Ankara Lazer Epilasyon , Ankara Epilasyon, Ankara Bölgesel Zayıflama, Ankara Güzellik Salonu - Ankara Lavinya Golden Güzellik Merkezi olarak İlkadımda bulunan salonumuzda buz başlıklı, diode başlıklı lazer epilasyon, hydrafacial ve medikal cilt bakımı, yosun peeling, bölgesel incelme, slim zayıflama, g5 masajı, selülit sıkılaştırma ve kavitasyon işlemleri yapılmaktadır. Estetik ve güzellik anlayışının sağlıkla ön planda tutulduğu güzellik merkezimizde, koşulsuz müşteri memnuniyeti sunma amaçlı, konusunda deneyimli ve profesyonel bir ekip tarafından hizmet vermektedir." />
   <meta name="author" content="Berati Şahin" />
   <meta name="description"
     content="Ankara Lavinya Golden Güzellik Merkezi olarak şehrin merkezinde bulunan salonumuzda siz değerli müşterilerimize hizmet vermekteyiz. 
     İstenmeyen tüylerinizden kalıcı olarak kurtulmak için bizlerle iletişime geçin. Uygun fiyatlar ve muhteşem lazer epilasyon kampanyaları ile karşınızdayız. Ayrıca medikal ve hydrafacial cilt bakımlarımız da bulunmaktadır. Bayanlar için tüm vücut, bikini bölgesi için epilasyon hizmetlerimiz mevcuttur. Hydrafacial ve medikal cilt bakımlarımız bulunmaktadır. G5 masajı, selülit sıkılaştırma, bölgesel inceltme hizmetlerimiz mevcuttur. RobotX marka epilasyon cihazlarımızla 6 odalı salonumuzda aynı anda birkaç müşterimize hizmet verebilmekteyiz. Kampanyalar için sosyal medyada takipte kalın. Adıyaman Blue Liva Güzellik Salonu, Estetik ve güzellik anlayışının sağlıkla ön planda tutulduğu güzellik merkezimde, koşulsuz müşteri memnuniyeti sunma amaçlı konusunda deneyimli ve profesyonel bir ekip tarafından hizmet vermektedir. " />
- <link rel="apple-touch-icon" href="%PUBLIC_URL%/LavinyaGoldenAnkaraLogo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/LavinyaGoldenAnkaraLogo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -58,7 +69,11 @@
 </head>
 
 <body>
-  
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WHDDPLJ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
